--- a/exercise_1/index.html
+++ b/exercise_1/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
     <head>
         <title>Exercise 1</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="Keywords" content="Exercise 1" />
-        <meta name="Description" content="Exercise 1" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <meta name="Keywords" content="Exercise 1">
+        <meta name="Description" content="Exercise 1">
         <link href="css/style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div class="container">
             <div class="header">
                 <div id="header_kiri">
-                    <img src="images/logo.png"></img>
+                    <img src="images/logo.png" alt="Logo">
                 </div>
                 <div id="header_kanan">
                     <form id="isiheaderkanan" name="form1" action="index.html" method="post">
@@ -96,8 +97,8 @@
                     </div>
                 </div>
                 <div class="detail_content">
-                    <div id="title">
-                       About <span class="nyala">Shop</span></h4> 
+                    <div class="title">
+                       About <span class="nyala">Shop</span> 
                     </div>
                     <p id="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -107,8 +108,8 @@
                         occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
                         anim id est laborum.</p>
 
-                    <div class="row">
-                        <div class="floating_left" id="title">
+                    <div class="title">
+                        <div class="floating_left">
                             Featured <span class="nyala">Shop</span>
                         </div>
                         <div class="floating_rigth">
@@ -120,7 +121,7 @@
                     <div id="featured">
                         <ul>
                             <li>
-                                <img src="images/images.png"></img>
+                                <img src="images/images.png" alt="product">
                                 <div class="product_detail">
                                     <span>Name :</span>
                                     <span>Price :</span>
@@ -128,7 +129,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/images.png"></img>
+                                <img src="images/images.png" alt="product">
                                 <div class="product_detail">
                                     <span>Name :</span>
                                     <span>Price :</span>
@@ -136,7 +137,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/images.png"></img>
+                                <img src="images/images.png" alt="product">
                                 <div class="product_detail">
                                     <span>Name :</span>
                                     <span>Price :</span>
@@ -144,7 +145,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/images.png"></img>
+                                <img src="images/images.png" alt="product">
                                 <div class="product_detail">
                                     <span>Name :</span>
                                     <span>Price :</span>
@@ -152,7 +153,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/images.png"></img>
+                                <img src="images/images.png" alt="product">
                                 <div class="product_detail">
                                     <span>Name :</span>
                                     <span>Price :</span>
@@ -160,7 +161,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/images.png"></img>
+                                <img src="images/images.png" alt="product">
                                 <div class="product_detail">
                                     <span>Name :</span>
                                     <span>Price :</span>
@@ -168,7 +169,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/images.png"></img>
+                                <img src="images/images.png" alt="product">
                                 <div class="product_detail">
                                     <span>Name :</span>
                                     <span>Price :</span>
@@ -176,7 +177,7 @@
                                 </div>
                             </li>
                             <li>
-                                <img src="images/images.png"></img>
+                                <img src="images/images.png" alt="product">
                                 <div class="product_detail">
                                     <span>Name :</span>
                                     <span>Price :</span>
@@ -214,7 +215,7 @@
                 <div class="clear"></div>
                 <div class="nyala">
                     Copyright &copy; PT. Walden Global Service 2011
-                </br></br>
+                <br><br>
                 </div>
             </div>
         </div>
